kuard-pod-resreq.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuardres
spec:
  containers:
    - image : nginx
      name: kuardres
      resources:
        requests:
          cpu: "500m"
          memory: "128Mi"
        limits:
          cpu: "1000m"
          memory: "256Mi"
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
