kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image : nginx
      name: kuard
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
